tests/snapshots/trace_solver__spanshot_request@13238974298806103765.snap
---
source: tests/trace_solver.rs
info:
  options:
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: Keep
    inherited_ref_on_ref: EatOuter
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    eat_inherited_ref_alone: true
    downgrade_shared_inside_shared: false
    rules_display_style: Plain
  bundle_name: permissive
  request: "ref mut x: T"
---
ref mut x @ p: T
// Applying rule `BindingBorrow`
x @ &mut p: &mut T
// Applying rule `Binding`
let x: &mut T = &mut p

// Final bindings (simplified):
let x: &mut T = &mut p
